<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="240dp"
    android:layout_gravity="end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/playfair_display"
        android:paddingEnd="20dp"
        android:gravity="center_vertical|end"
        android:text="@string/your_profile"
        android:background="#5AE3F5"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/exchangePointsBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/exchange_points"
        android:background="#5AE3F5"
        android:paddingEnd="20dp"
        android:gravity="center_vertical|end"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/userCommentsBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/my_comments"
        android:paddingEnd="20dp"
        android:gravity="center_vertical|end"
        android:background="#5AE3F5"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/userPicturesBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/playfair_display"
        android:paddingEnd="20dp"
        android:gravity="center_vertical|end"
        android:text="@string/my_pictures"
        android:background="#5AE3F5"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/playfair_display"
        android:paddingEnd="20dp"
        android:gravity="center_vertical|end"
        android:text="@string/log_out"
        android:background="#5AE3F5"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>
</LinearLayout>